src/app/header-bar/header-bar.component.css
.header-one {
    background-color: #C9DAE2;
    height: 28px;
    min-width: 1024px;
}

.right-header-one {
    padding-bottom: 6px;
}

.right-header-one a {
    color: #21282d;
    font-family: Lato, sans-serif;
    font-size: 12px;
    margin-right: 10px;
    margin-left: 10px;
}

.carousel-item.active {
    display:block;
}

#header-carousel {
    color: #21282d;
    font-family: Lato, sans-serif;
    font-size: 14px;
    margin-top: 10px;
    margin-right: 10px;
    margin-left: 10px;
}

.header-two #logo {
    margin: 12px;
    width: 188px;
    height: 26px;
}

.search-bar {
    padding: 0px;
}

#navbarDropdown {
    background-color: #dddddb;
    color: #21282d;
}

#signInDropdown {
    color: #21282d;
}

.dropdown-item {
    color: #21282d;
    font-family: Lato, sans-serif;
}

.search-icon {
    border-color: #288480;
    color: white;
    background-color: #288480;
    height: 40px;
    border-radius: 0%;
}

.sign-in-box p {
    font-family: Lato, sans-serif;
    margin: 0px;
    font-size: 11px;
    color: #a0a0a0;
}

.sign-in-box .nav-item .dropdown-toggle {
    padding: 0px;
    font-family: Lato, sans-serif;
    font-size: 13px;
}

.sign-in-button {
    background-color: #288480;
    color: white;
    border-radius: 0%;
    margin-left: 20%;
}

.sign-in-menu p {
    color: #288480;
    text-align: center;
    margin-top: 8px;
    font-size: 12px;
} 

.search-bar-container {
    margin: 0px;
    padding: 0px;
    height: 100%;
}

.search-input { 
    background-color: #eeeeed;
    height: 40px;
    border-radius: 0%;
    width: 472px;
    margin-right: 0px;
}

.fa-shopping-cart {
    color: black;
    font-size: 30px;
}

.common-link {
    font-family: Lato, sans-serif;
    font-size: 12px;
    color: #21282d;
}

.sale-link {
    font-family: Lato, sans-serif;
    font-size: 12px;
    color: red;
}

